# manga-translator-ui

./: .env.example  .gitignore  30cadb668d2efc5c432fd2939130df0d_translations.json  CHANGELOG_v1.9.1.md  CLAUDE.md  README.md  VERSION  YOLOtuiliguoluv.py  gemini_key_validator_ui.py  gen_scripts.py  macOS_1_首次安装.sh  macOS_3_检查更新并启动.sh  manga-translator-cpu.spec  manga-translator-gpu.spec  pyproject.toml  requirements_amd.txt  requirements_cpu.txt  requirements_gpu.txt  requirements_metal.txt  test_ysgyolo_detection_gui.py  test_ysgyolo_pt_gui.py  test_ysgyolo_ultralytics_gui.py  updater.spec  步骤1-首次安装.bat  步骤2-启动Qt界面.bat  步骤3-检查更新并启动.bat  步骤4-更新维护.bat
.github/workflows/: build-and-release.yml  docker-build-push.yml  python-publish.yml  sync-to-gitee.yml
.qoder/repowiki/zh/content/: 快速入门.md  故障排除.md  项目概述.md
.qoder/repowiki/zh/content/开发者指南/: API使用.md  开发者指南.md
.qoder/repowiki/zh/content/开发者指南/插件开发/: 开发实战.md  插件开发.md  插件架构.md
.qoder/repowiki/zh/content/核心翻译引擎/: OCR识别.md  图像修复.md  文本检测.md  文本渲染.md  核心翻译引擎.md  翻译处理.md
.qoder/repowiki/zh/content/用户界面详解/: 用户界面详解.md
.qoder/repowiki/zh/content/用户界面详解/UI组件库/: UI组件库.md  上下文菜单.md  属性面板.md  文件管理组件.md  画布渲染器.md  进度对话框.md
.qoder/repowiki/zh/content/用户界面详解/服务集成/: 工作流控制.md  文件服务接口.md  日志系统集成.md  服务集成.md  翻译服务集成.md
.qoder/repowiki/zh/content/用户界面详解/状态与事件流/: 状态与事件流.md  状态管理机制.md  用户事件处理.md  配置变更传播.md
.qoder/repowiki/zh/content/配置系统/: GPT提示工程.md  主配置文件详解.md  检查点与预设管理.md  翻译字典.md  配置系统.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
desktop-ui/: app.py  editor_frame.py  translation_worker.py
desktop-ui/components/: canvas_renderer_new.py  property_panel.py  text_renderer_backend.py
desktop_qt_ui/: app_logic.py  editor_view.py  main.py  main_view.py  main_view_layout.py  main_window.py
desktop_qt_ui/core/: config_models.py
desktop_qt_ui/editor/: commands.py  editor_controller.py  editor_model.py  geometry_commit_pipeline.py  graphics_items.py  graphics_view.py  original_compare_view.py  render_layout_pipeline.py  text_renderer_backend.py
desktop_qt_ui/locales/: en_US.json  es_ES.json  ja_JP.json  ko_KR.json  settings_tab_layout.json  zh_CN.json  zh_TW.json
desktop_qt_ui/main_view_parts/: ai_colorizer_prompt_editor.py  dynamic_settings.py  env_management.py  layout.py  prompt_preview.py  runtime.py  style.py  style_generator.py  theme.py  ui_texts.py
desktop_qt_ui/services/: config_service.py  export_service.py  file_service.py  i18n_service.py  ocr_service.py  render_parameter_service.py  translation_service.py  workflow_service.py
desktop_qt_ui/utils/: archive_extractor.py  memory_cleanup.py  shortcut_manager.py
desktop_qt_ui/widgets/: color_picker.py  custom_api_params_editor.py  editor_toolbar.py  file_list_view.py  folder_dialog.py  property_panel.py  themed_message_box.py  themed_text_input_dialog.py  toggle_switch.py
dict/: prompt_example.json  system_prompt_hq.json  system_prompt_hq.yaml  system_prompt_line_break.json
doc/: API_CONFIG.md  CHANGELOG_v1.8.9.md  CHANGELOG_v1.9.0.md  CHANGELOG_v1.9.6.md  CHANGELOG_v1.9.7.md  CHANGELOG_v1.9.9.md  CHANGELOG_v2.0.0.md  CHANGELOG_v2.0.2.md  CHANGELOG_v2.0.8.md  CHANGELOG_v2.0.9.md  CHANGELOG_v2.1.0.md  CHANGELOG_v2.1.5.md  CHANGELOG_v2.2.7.md  CLI_USAGE.md  DEBUGGING.md  DEVELOPMENT.md  FEATURES.md  INSTALLATION.md  MODEL_REPO_README.md  README.md  README_CN.md  SETTINGS.md  USAGE.md  WORKFLOWS.md
doc/CHANGELOG/: CHANGELOG_v1.8.2.md  CHANGELOG_v2.1.5.md
doc/roadmap/: ARCHITECTURE_DIRECTION.md  FASTAPI_VUE_TAURI_ROADMAP.md  MANGA_TRANSLATOR_SERVER_ROADMAP.md
examples/: config-example.json  model_sources.toml
examples/config/: translators.json
manga_translator/: __main__.py  args.py  concurrent_pipeline.py  config.py  custom_api_params.py  manga_translator.py  model_sources.py
manga_translator/colorization/: model_api_colorizer.py  prompt_loader.py
manga_translator/detection/: __init__.py  common.py  default.py  yolo_obb.py
manga_translator/inpainting/: __init__.py  inpainting_lama.py  inpainting_lama_mpe.py  inpainting_sd.py  none.py
manga_translator/inpainting/ldm/models/: autoencoder.py
manga_translator/inpainting/ldm/modules/image_degradation/: bsrgan.py
manga_translator/mask_refinement/: __init__.py  text_mask_utils.py
manga_translator/mode/: local.py  subprocess_manager.py  ws.py
manga_translator/ocr/: __init__.py  common.py  model_32px.py  model_48px.py  model_48px_ctc.py  model_api_ocr.py  model_manga_ocr.py  model_paddleocr.py  model_paddleocr_vl.py  paddleocr_vl_patcher.py
manga_translator/rendering/: __init__.py  auto_linebreak.py  model_api_renderer.py  text_render.py  text_render_eng.py  text_render_hq.py
manga_translator/server/: main.py  request_extraction.py  to_json.py
manga_translator/server/core/: __init__.py  auth.py  config_manager.py  history_service.py  middleware.py  models.py  task_manager.py
manga_translator/server/repositories/: resource_repository.py
manga_translator/server/routes/: __init__.py  admin.py  auth.py  cleanup.py  config.py  files.py  history.py  locales.py  offline_tasks.py  translation.py  web.py
manga_translator/server/static/: admin.html  admin.js  admin_config.html  index.html  script.js  style.css
manga_translator/server/static/js/admin/components/: permission-editor.js
manga_translator/translators/: __init__.py  common.py  gemini.py  gemini_hq.py  m2m100.py  openai.py  openai_hq.py  prompt_loader.py
manga_translator/upscaling/: __init__.py  esrgan.py  esrgan_pytorch.py  mangajanai.py  realcugan.py  tile_utils.py  waifu2x.py
manga_translator/utils/: concurrent_pipeline.py  ctd_replace.py  generic.py  inference.py  mangalens_detector.py  openai_image_interface.py  path_manager.py  photoshop_export.py  replace_translation.py  retry.py  textblock.py  translation_text.py
packaging/: Dockerfile  VERSION  check_version.py  detect_torch_type.py  launch.py
packaging/build_utils/: package_checker.py
tests/model_sources/: test_model_sources.py
