[project]
name = "manga-translator-ui"
version = "2.2.0"
description = "Desktop and web UI for manga-image-translator"
requires-python = "==3.12.*"
dependencies = [
  # pydensecrf - 按平台选择安装来源
  "pydensecrf @ https://github.com/hgmzhn/manga-translator-ui/releases/download/v1.7.6/pydensecrf-1.0-cp312-cp312-win_amd64.whl ; sys_platform == 'win32'",
  "pydensecrf @ https://github.com/WeMingT/pydensecrf/releases/download/v1.0.0-ubuntu24.04-cp312/pydensecrf-1.0-cp312-cp312-linux_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.12'",
  "pydensecrf @ git+https://github.com/lucasb-eyer/pydensecrf.git ; sys_platform == 'linux' and (platform_machine != 'x86_64' or python_version != '3.12')",
  "pydensecrf @ https://github.com/hgmzhn/pydensecrf/releases/download/v1.0.0/pydensecrf-1.0-cp312-cp312-macosx_10_13_universal2.whl ; sys_platform == 'darwin'",
  "pydensecrf @ git+https://github.com/lucasb-eyer/pydensecrf.git ; sys_platform != 'win32' and sys_platform != 'linux' and sys_platform != 'darwin'",
]

[project.optional-dependencies]
cpu = [
  "torch==2.8.0",
  "torchvision==0.23.0",
  "torchaudio==2.8.0",
  "aiofiles==25.1.0",
  "aiohttp==3.12.15",
  "aioshutil==1.5",
  "albumentations==2.0.8",
  "arabic-reshaper==3.0.0",
  "backports.statistics==0.1.0",
  "colorama==0.4.6",
  "ctranslate2==3.24.0",
  "customtkinter==5.2.2",
  "einops==0.8.1",
  "fastapi==0.116.1",
  "fire==0.7.1",
  "freetype-py==2.5.1",
  "fugashi==1.3.2",
  "python-multipart==0.0.20",
  "httpcore==1.0.9",
  "httpx>=0.28.1,<1.0.0",
  "huggingface-hub==0.34.4",
  "ijson==3.4.0",
  "jaconv==0.3.4",
  "json5==0.9.28",
  "kornia==0.8.1",
  "langcodes==3.5.0",
  "loguru==0.7.3",
  "matplotlib==3.10.5",
  "networkx==3.5",
  "numpy>=2.0,<2.3",
  "omegaconf==2.3.0",
  "onnxruntime==1.20.1",
  "openai==2.14.0",
  "curl_cffi>=0.7.0",
  "opencv-contrib-python>=4.10.0",
  "packaging<25.0",
  "pandas==2.3.1",
  "Pillow==11.3.0",
  "pillow-heif==0.21.0",
  "psutil==5.9.5",
  "py3langid==0.2.2",
  "pyclipper==1.3.0.post6",
  "pydantic==2.11.7",
  "pyperclip==1.9.0",
  "uharfbuzz>=0.40.0",
  "pythainlp[nlpo3]==5.3.1",
  "PyHyphen==4.0.4",
  "PyQt6==6.9.1",
  "python-dotenv==1.1.1",
  "rich==14.1.0",
  "safetensors==0.6.2",
  "spandrel==0.4.1",
  "scipy==1.16.1",
  "ultralytics==8.4.14",
  "setuptools==80.9.0",
  "Shapely==2.1.1",
  "scikit-image==0.25.2",
  "starlette==0.47.2",
  "tiktoken==0.11.0",
  "timm==1.0.19",
  "transformers==4.55.0",
  "accelerate>=1.12.0",
  "tqdm==4.67.1",
  "unidic_lite==1.0.8",
  "uvicorn==0.35.0",
  "websockets==14.2",
  "anyio>=4.8.0",
  "google-genai==1.57.0",
  "torchsummary",
  "open_clip_torch==3.1.0",
  "python-bidi==0.6.6",
  "tufup==0.9.0",
  "google-cloud==0.34.0",
  "PyMuPDF==1.25.5",
  "rarfile==4.2",
  "py7zr==0.22.0",
  "bcrypt==4.2.1",
  "cryptography==44.0.0",
  "APScheduler==3.10.4",
]

gpu = [
  "torch==2.8.0",
  "torchvision==0.23.0",
  "torchaudio==2.8.0",
  "aiofiles==25.1.0",
  "aiohttp==3.12.15",
  "aioshutil==1.5",
  "albumentations==2.0.8",
  "arabic-reshaper==3.0.0",
  "backports.statistics==0.1.0",
  "colorama==0.4.6",
  "ctranslate2==3.24.0",
  "customtkinter==5.2.2",
  "einops==0.8.1",
  "fastapi==0.116.1",
  "fire==0.7.1",
  "freetype-py==2.5.1",
  "fugashi==1.3.2",
  "python-multipart==0.0.20",
  "httpcore==1.0.9",
  "httpx>=0.28.1,<1.0.0",
  "huggingface-hub==0.34.4",
  "jaconv==0.3.4",
  "json5==0.9.28",
  "kornia==0.8.1",
  "langcodes==3.5.0",
  "loguru==0.7.3",
  "matplotlib==3.10.5",
  "networkx==3.5",
  "numpy>=2.0,<2.3",
  "omegaconf==2.3.0",
  "onnxruntime-gpu==1.20.1",
  "openai==2.14.0",
  "curl_cffi>=0.7.0",
  "opencv-contrib-python>=4.10.0",
  "packaging<25.0",
  "pandas==2.3.1",
  "Pillow==11.3.0",
  "pillow-heif==0.21.0",
  "psutil==5.9.5",
  "py3langid==0.2.2",
  "pyclipper==1.3.0.post6",
  "pydantic==2.11.7",
  "pyperclip==1.9.0",
  "uharfbuzz>=0.40.0",
  "pythainlp[nlpo3]==5.3.1",
  "PyHyphen==4.0.4",
  "PyQt6==6.9.1",
  "python-dotenv==1.1.1",
  "rich==14.1.0",
  "safetensors==0.6.2",
  "spandrel==0.4.1",
  "scipy==1.16.1",
  "ultralytics==8.4.14",
  "setuptools==80.9.0",
  "Shapely==2.1.1",
  "scikit-image==0.25.2",
  "starlette==0.47.2",
  "tiktoken==0.11.0",
  "timm==1.0.19",
  "transformers==4.55.0",
  "tqdm==4.67.1",
  "unidic_lite==1.0.8",
  "accelerate>=1.12.0",
  "uvicorn==0.35.0",
  "websockets==14.2",
  "anyio>=4.8.0",
  "xformers==0.0.32.post2",
  "torchsummary",
  "open_clip_torch==3.1.0",
  "google-genai==1.57.0",
  "python-bidi==0.6.6",
  "tufup==0.9.0",
  "google-cloud==0.34.0",
  "PyMuPDF==1.25.5",
  "rarfile==4.2",
  "py7zr==0.22.0",
  "bcrypt==4.2.1",
  "cryptography==44.0.0",
  "APScheduler==3.10.4",
]

metal = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "torchaudio>=2.0.0",
  "aiofiles==25.1.0",
  "aiohttp==3.12.15",
  "aioshutil==1.5",
  "albumentations==2.0.8",
  "arabic-reshaper==3.0.0",
  "backports.statistics==0.1.0",
  "colorama==0.4.6",
  "ctranslate2==3.24.0",
  "customtkinter==5.2.2",
  "einops==0.8.1",
  "fastapi==0.116.1",
  "fire==0.7.1",
  "freetype-py==2.5.1",
  "fugashi==1.3.2",
  "python-multipart==0.0.20",
  "httpcore==1.0.9",
  "httpx>=0.28.1,<1.0.0",
  "huggingface-hub==0.34.4",
  "ijson==3.4.0",
  "jaconv==0.3.4",
  "json5==0.9.28",
  "kornia==0.8.1",
  "langcodes==3.5.0",
  "loguru==0.7.3",
  "matplotlib==3.10.5",
  "networkx==3.5",
  "numpy>=2.0,<2.3",
  "omegaconf==2.3.0",
  "onnxruntime==1.20.1",
  "openai==2.14.0",
  "curl_cffi>=0.7.0",
  "opencv-contrib-python>=4.10.0",
  "packaging<25.0",
  "pandas==2.3.1",
  "Pillow==11.3.0",
  "pillow-heif==0.21.0",
  "psutil==5.9.5",
  "py3langid==0.2.2",
  "pyclipper==1.3.0.post6",
  "pydantic==2.11.7",
  "pyperclip==1.9.0",
  "uharfbuzz>=0.40.0",
  "pythainlp[nlpo3]==5.3.1",
  "PyHyphen==4.0.4",
  "PyQt6==6.9.1",
  "python-dotenv==1.1.1",
  "rich==14.1.0",
  "safetensors==0.6.2",
  "spandrel==0.4.1",
  "scipy==1.16.1",
  "ultralytics==8.4.14",
  "setuptools==80.9.0",
  "Shapely==2.1.1",
  "scikit-image==0.25.2",
  "starlette==0.47.2",
  "tiktoken==0.11.0",
  "timm==1.0.19",
  "transformers==4.55.0",
  "accelerate>=1.12.0",
  "tqdm==4.67.1",
  "unidic_lite==1.0.8",
  "uvicorn==0.35.0",
  "websockets==14.2",
  "anyio>=4.8.0",
  "google-genai==1.57.0",
  "torchsummary",
  "open_clip_torch==3.1.0",
  "python-bidi==0.6.6",
  "tufup==0.9.0",
  "google-cloud==0.34.0",
  "PyMuPDF==1.25.5",
  "rarfile==4.2",
  "py7zr==0.22.0",
  "bcrypt==4.2.1",
  "cryptography==44.0.0",
  "APScheduler==3.10.4",
]

# AMD extra 目前仅覆盖 requirements_amd.txt 中的非 ROCm / 非 PyTorch 特殊安装部分。
# ROCm torch、torchvision、torchaudio 及其依赖生态，当前仍以现有安装脚本/launch.py 为准。
amd = [
  "aiofiles==25.1.0",
  "aiohttp==3.12.15",
  "aioshutil==1.5",
  "albumentations==2.0.8",
  "arabic-reshaper==3.0.0",
  "backports.statistics==0.1.0",
  "colorama==0.4.6",
  "ctranslate2>=4.6.0",
  "customtkinter==5.2.2",
  "einops==0.8.1",
  "fastapi>=0.116.1",
  "fire==0.7.1",
  "freetype-py==2.5.1",
  "fugashi==1.3.2",
  "python-multipart==0.0.20",
  "httpcore==1.0.9",
  "httpx>=0.28.1,<1.0.0",
  "huggingface-hub>=0.36.0",
  "ijson==3.4.0",
  "jaconv==0.3.4",
  "langcodes==3.5.0",
  "loguru==0.7.3",
  "matplotlib==3.10.5",
  "networkx==3.5",
  "omegaconf==2.3.0",
  "onnxruntime>=1.23.0",
  "openai==2.14.0",
  "curl_cffi>=0.7.0",
  "opencv-contrib-python>=4.10.0",
  "packaging<25.0",
  "pandas==2.3.1",
  "Pillow==11.3.0",
  "pillow-heif==0.21.0",
  "psutil==5.9.5",
  "py3langid==0.2.2",
  "pyclipper==1.3.0.post6",
  "pydantic==2.11.7",
  "pyperclip==1.9.0",
  "uharfbuzz>=0.40.0",
  "pythainlp[nlpo3]==5.3.1",
  "PyHyphen==4.0.4",
  "PyQt6==6.9.1",
  "python-dotenv==1.1.1",
  "rich>=14.1.0",
  "safetensors==0.6.2",
  "scipy==1.16.1",
  "setuptools==80.9.0",
  "Shapely==2.1.1",
  "scikit-image==0.25.2",
  "starlette==0.47.2",
  "tiktoken==0.11.0",
  "transformers==4.55.0",
  "tqdm==4.67.1",
  "unidic_lite==1.0.8",
  "uvicorn==0.35.0",
  "websockets==14.2",
  "anyio>=4.8.0",
  "google-genai==1.57.0",
  "python-bidi==0.6.6",
  "tufup==0.9.0",
  "google-cloud==0.34.0",
  "PyMuPDF==1.25.5",
  "rarfile==4.2",
  "py7zr==0.22.0",
  "bcrypt==4.2.1",
  "cryptography==44.0.0",
  "APScheduler==3.10.4",
]

build = [
  "pyinstaller",
]

dev = [
  "pytest==7.2.2",
  "pytest-anyio==0.0.0",
]

[tool.uv]
package = false
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
    { extra = "metal" },
    { extra = "amd" },
  ],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "gpu" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "gpu" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "gpu" },
]
xformers = [
  { index = "pytorch-cu128", extra = "gpu" },
]
